# multi-agent-system

./: .gitignore  README.md  docker-compose.yml  meeting_scheduler.py  pyproject.toml  setup.sh
data/: calendar_data.tsv  participant_preferences.tsv
multi_agent/: main.py
multi_agent/agents/: __init__.py  negotiation_specialist.py  schedule_analyst.py
multi_agent/autogent/: analyst_tool.py  coordinator.py  negotiatior_tool.py
multi_agent/config/: models.py
multi_agent/logger/: AgentLogger.py
multi_agent/mock_data/: calendar.py  preferences.py
